[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MatchLobby.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/fundo-pedras.png" type="Texture" id=2]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/assets/ok-cancela.png" type="Texture" id=4]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 3 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="fundo-pedras" type="Sprite" parent="BG"]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 3.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Aguarde Jogadores para começar"
align = 1
valign = 1
autowrap = true

[node name="PlayersList" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 67.0
margin_top = 83.0
margin_right = -78.0
margin_bottom = -114.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PlayersList"]

[node name="Timer" type="Timer" parent="."]

[node name="HostBtns" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="Start" type="TextureButton" parent="HostBtns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -60.0
margin_right = -18.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HostBtns"]
margin_left = -189.0
margin_top = -34.0
margin_right = -6.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Começar"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="HostBtns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -60.0
margin_right = 208.0
margin_bottom = 23.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Label2" type="Label" parent="HostBtns"]
margin_left = 36.0
margin_top = -34.0
margin_right = 219.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Cancelar"
align = 1
valign = 1

[node name="LabelMin" type="Label" parent="HostBtns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -101.5
margin_right = 167.0
margin_bottom = -50.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Aguarde o mínimo de jogadores para começar"
align = 1
valign = 1
autowrap = true

[node name="ClientBtns" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="Quit" type="TextureButton" parent="ClientBtns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -60.0
margin_right = 101.0
margin_bottom = 25.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Label3" type="Label" parent="ClientBtns"]
margin_left = -71.0
margin_top = -34.0
margin_right = 112.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Sair"
align = 1
valign = 1
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HostBtns/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HostBtns/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ClientBtns/Quit" to="." method="_on_Quit_pressed"]
